--- a/timestampmicroservice/views/index.html
+++ b/timestampmicroservice/views/index.html
@@ -3,9 +3,8 @@
 <html>
 
    <head>
-      <title>Timestamp Microservice</title>
-      <link rel="shortcut icon" href="https://cdn.hyperdev.com/us-east-1%3A52a203ff-088b-420f-81be-45bf559d01b1%2Ffavicon.ico" type="image/x-icon"/>
-      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+      <title>API: Timestamp Microservice</title>
+      <link rel="shortcut icon" href="https://bimarshbhusal.com.np/icons/icon-48x48.png?v=646f8c0b51bf5a308a3f13e771d8acf7" type="image/x-icon"/>
       <link href="style.css" rel="stylesheet" type="text/css">
    </head>
 
