--- a/timestampmicroservice/views/index.html
+++ b/timestampmicroservice/views/index.html
@@ -14,7 +14,7 @@
         <h2>Timestamp Microservice</h2>
         <ul class="user-stories">
           
-          <li>API Endpoint: <code>GET [project_url]/api/timestamp/date_string</code></li>
+          <li>API Endpoint: <code>GET [project_url]/api/date_string</code></li>
          
           
         </ul>
@@ -22,14 +22,14 @@
         <h3>Example Usage:</h3>
         <ul>
           <li>
-            <a href="/api/timestamp/2022-7-15">
+            <a href="/api/2022-7-15">
 
-              <code>GET [project url]/api/timestamp/2022-7-15</code></li>
+              <code>GET [project url]/api/2022-7-15</code></li>
             </a>
           <li>
-            <a href="/api/timestamp/1657858009027">
+            <a href="/api/1657858009027">
 
-              <code>GET project url]/api/timestamp/1657858009027</code>
+              <code>GET project url]/api/1657858009027</code>
             </a>
           </li>
         </ul>
