--- a/views/timestamp.html
+++ b/views/timestamp.html
@@ -22,12 +22,12 @@
         <h3>Example Usage:</h3>
         <ul>
           <li>
-            <a href="/api/2022-7-15">
+            <a href="/timestamp/api/2022-7-15">
 
               <code>GET [project url]/api/2022-7-15</code></li>
             </a>
           <li>
-            <a href="/api/1657858009027">
+            <a href="/timestamp/api/1657858009027">
 
               <code>GET project url]/api/1657858009027</code>
             </a>
