--- a/public/style.css
+++ b/public/style.css
@@ -1,31 +1,31 @@
 /****** Main Styling ******/
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
 body {
-	font-family: 'Poppins', sans-serif;
-    font-size: 16px;
-    color: #48b8a6;
-    background-color: #0a192f;
-    text-align: center;
-    position: absolute;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    right: 0;
-    left: 0;
-    top: 0;
-    bottom: 0;
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  color: #48b8a6;
+  background-color: #0a192f;
+  text-align: center;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  right: 0;
+  left: 0;
+  top: 0;
+  bottom: 0;
 }
 
 .container {
-	padding: 40px 30px;
-    margin-top: 40px;
-    display: flex;
-    flex-direction: column;
-    border-radius: 10px;
-    border: 2px;
-    border-color: #48b8a6;
-    border-style: solid;
-    box-shadow: #48b8a6d9 1px 1px 4px 1px;
+  padding: 40px 30px;
+  margin-top: 40px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  border: 2px;
+  border-color: #48b8a6;
+  border-style: solid;
+  box-shadow: #48b8a6d9 1px 1px 4px 1px;
 }
 
 h3 {
@@ -33,7 +33,7 @@ h3 {
 }
 
 .footer {
-	margin-top: 40px;
+  margin-top: 40px;
 }
 
 .user-stories {
@@ -43,7 +43,7 @@ h3 {
   /* margin: 15px auto; */
 }
 code {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   padding: 2px;
   color: white;
   background-color: #172f52ed;
@@ -53,10 +53,10 @@ code {
   border-radius: 5px;
 }
 ol {
-	list-style-position: outside;
+  list-style-position: outside;
 }
 ul {
-	list-style-type: none;
+  list-style-type: none;
 }
 
 li {
@@ -67,6 +67,42 @@ li {
 }
 
 a {
-	color: #2574A9;
-	text-decoration: none;
+  color: #2574a9;
+  text-decoration: none;
 }
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  gap: 40px;
+}
+
+.custom-file-input{
+  font-family: "Poppins", sans-serif;
+
+}
+.custom-file-input::-webkit-file-upload-button {
+  visibility: hidden;
+}
+.custom-file-input::before {
+  content: "Select file";
+  display: inline-block;
+  border: 1px solid #999;
+  border-radius: 3px;
+  padding: 10px 20px;
+  outline: none;
+  white-space: nowrap;
+  -webkit-user-select: none;
+  cursor: pointer;
+  font-weight: 700;
+  font-size: 10pt;
+}
+
+.input-button {
+  background: #48b8a6;
+    border-radius: 10px;
+    padding: 15px 20px;
+    cursor: pointer;
+}
+
