--- a/views/exercise.html
+++ b/views/exercise.html
@@ -17,7 +17,7 @@
 
       <ul style="display:flex;gap:10px;">
         <li>
-          <form action="/exercisetracker/api/users" method="post">
+          <form action="/exercisetracker/api/users" method="post" >
             <fieldset>
               <legend>Create a New User</legend>
               <p><code>POST /api/exercise/new-user</code></p>
@@ -34,7 +34,7 @@
         </li>
 
         <li>
-          <form action="/exercisetracker/api/exercise/add" method="post">
+          <form method="post" id="exercise-form">
             <fieldset>
               <legend>Add exercises</legend>
               <p><code>POST /api/exercise/new-user</code></p>
@@ -76,4 +76,17 @@
       </ul>
     </div>
   </body>
+
+  <script>
+    
+    const exerciseForm = document.getElementById("exercise-form");
+
+exerciseForm.addEventListener("submit", () => {
+  const userId = document.getElementById("uid").value;
+  exerciseForm.action = `/exercisetracker/api/${userId}/exercises`;
+
+  exerciseForm.submit();
+});
+
+  </script>
 </html>
