--- a/views/exercise.html
+++ b/views/exercise.html
@@ -42,7 +42,7 @@
               <input
                 id="uid"
                 type="text"
-                name="userId"
+                name="_id"
                 placeholder="userId*"
                 class="url-input"
               />
