--- a/views/randomquote.html
+++ b/views/randomquote.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Random Quote Machine</title>
+    <title>Random Quote Generator</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
@@ -58,7 +58,7 @@
                   </a>
                   <a
                     id="tweet-quote"
-                    href="#"
+                    href="https://www.twitter.com/intent/tweet"
                     aria-label="Twitter Share Button"
                   >
                     <i class="fab fa-twitter fa-lg"></i>
