--- a/views/scatterplot.html
+++ b/views/scatterplot.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <title>Visualize Data with a Scatterplot Graph</title>
+    <link
+    rel="shortcut icon"
+    href="https://bimarshbhusal.com.np/icons/icon-48x48.png?v=646f8c0b51bf5a308a3f13e771d8acf7"
+    type="image/x-icon"
+  />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
       .graph {
