--- a/views/stock.html
+++ b/views/stock.html
@@ -11,6 +11,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="stock.css" />
+
+    <style>
+        body{
+            
+        }
+    </style>
   </head>
   <body>
     <header>
